# slater

./: Cargo.toml  LICENSE-APACHE  README.md
.gitea/workflows/: ci.yaml
assets/init/: slater.toml
assets/init/common/: slater.toml
assets/init/common/content/: writing-process.md
assets/init/content/: hello-world.md
assets/init/static/: style.css
assets/init/templates/: base.html  index.html  post.html
assets/themes/default/: theme.toml
assets/themes/default/static/: style.css
assets/themes/default/templates/: base.html  index.html
assets/themes/minimal/: theme.toml
assets/themes/minimal/templates/: base.html
docs/: architecture.md
src/: config.rs  error.rs  fs.rs  lib.rs  main.rs
src/cmd/: build.rs  init.rs  mod.rs  new.rs  serve.rs
src/content/: front_matter.rs  mod.rs  parser.rs  post.rs
src/dev/: server.rs  watch.rs
src/render/: builder.rs  mod.rs  template.rs
tmp-blog/: slater.toml
tmp-blog/_site/: index.html
tmp-blog/_site/about/: index.html
tmp-blog/_site/hello-world/: index.html
tmp-blog/_site/notes-on-making-things/: index.html
tmp-blog/content/: about.md  hello-world.md
tmp-blog/static/: style.css
tmp-blog/templates/: index.html  post.html
